Fix song spacing

--- a/src/components/albumDetailsModal/AlbumDetailsModal.module.scss
+++ b/src/components/albumDetailsModal/AlbumDetailsModal.module.scss
@@ -77,10 +77,12 @@
 .song {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 5px;
   margin-bottom: 5px;
 }
 
 .songTime {
+  margin-left: 5px;
   color: var(--color-red);
 }
